# F1TENTH_masters_thesis

./: .gitmodules  README.md  frames.gv
install/: local_setup.sh  setup.sh
install/RRT_package/share/RRT_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera_pkg/lib/camera_pkg/: opp_pose_estimator  opp_pose_tester
install/camera_pkg/share/camera_pkg/: package.sh  package.xml
install/f1tenth_gym_ros/lib/f1tenth_gym_ros/: amcl_viz_node
install/f1tenth_gym_ros/share/f1tenth_gym_ros/: package.sh
install/gap_follow/lib/gap_follow/: reactive_node.py
install/gap_follow/share/gap_follow/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/particle_filter/share/particle_filter/: package.sh
install/ppo_racing/lib/ppo_racing/: multi_agent_policy_node  multi_policy_node  policy_node  policy_node_local_obs
install/ppo_racing/share/ppo_racing/: package.bash  package.dsv  package.ps1  package.sh  package.xml  (+1 more)
log/: latest_build
src/RRT_package/RRT_package/: RRT_node.py
src/camera_pkg/: setup.py
src/camera_pkg/camera_pkg/: pose_visualizer.py
src/ppo_racing/: setup.cfg  setup.py
src/ppo_racing/ppo_racing/: Spielberg_waypoints.csv  custom_policy.py  multi_env_train.py  multi_train_test.py  pendulum_train.py  plotting_from_csv.py  policy_node.py  ppo_agent.py  raceline.csv  test_gym.py  train.py  utils.py
src/rrt_package/: setup.cfg  setup.py  waypoints.csv
src/rrt_package/maps/: blank_map.pgm  levine_bit.yaml
src/rrt_package/rrt_package/: rrt_pure_pursuit.py
(+166 files in other folders)
